--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"cli": "bun run bin/port",
 		"lint": "oxlint src --tsconfig tsconfig.json",
 		"test": "bun test",
-		"build:bin": "bun build --compile src/entry.ts --outfile dist/port"
+		"build:bin": "bun build --compile src/entry.ts --outfile dist/port",
+		"build:bin:win": "bun build --compile src/entry.ts --outfile dist/port.exe"
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
